--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: default-project-template
+title: picamzero
 hero_image: images/banner.png
 description: default-project-template description
 version: 4
